server/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: avnet-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
