server/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: avnet-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
