server/lb-avnet.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-avnet
spec:
  externalIPs:
    - "192.168.49.2"
  selector:
    app: avnet-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
